--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.spigot</groupId>
+            <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.8-SNAPSHOT-0.1</version>
+            <version>1.8.3-R0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
