--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.spigotmc</groupId>
+            <groupId>org.spigot</groupId>
             <artifactId>spigot</artifactId>
             <version>1.8.3-R0.1-SNAPSHOT</version>
         </dependency>
